# humigence

./: .gitignore  .replit  CHANGES_SUMMARY.md  Makefile  README.md  app.js  convert_to_conversations.py  pyproject.toml  requirements.txt  styles.css
Frontend/: app-2.js
configs/: curated_eval_prompts.jsonl  humigence.basic.bak  humigence.basic.json  humigence.basic.json.bak  test_advanced.json.bak  test_basic.json.bak
frontend/: app.js  index.html  styles.css
humigence/: __init__.py  acceptance.py  cli.py  config.py  data_utils.py  eval.py  infer.py  model_utils.py  pack.py  plan.py  precision.py  preprocess.py  telemetry.py  templates.py  train.py  training_gate.py  utils_data.py  utils_logging.py  wizard.py
humigence/assets/datasets/: openassist_demo.jsonl
tests/: test_acceptance_aliases.py  test_cli.py  test_cli_root.py  test_cli_wizard.py  test_config.py  test_config_atomic.py  test_config_paths.py  test_pipeline_demo_dataset.py  test_pipeline_integration.py  test_precision_mapping.py  test_precision_modes.py  test_preprocess.py  test_trainer_compatibility.py  test_trainer_runs_dir.py  test_training_gate.py  test_wizard_dataset.py  test_wizard_pipeline.py
